[build-system]
requires = ["setuptools>=80","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledger-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
